correcting link button alignment

--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -160,6 +160,8 @@
 /* --- LINK BUTTON ---------------------------------------------------------- */
 
 #dform_container button.link-btn.dform_widget_type_button {
+  display: flex;
+  align-items: center;
   padding: 0;
   font-size: var(--font-size-p1);
   font-weight: var(--font-weight-semibold);
